# 3d_renderer

./: .gitignore  CMakeLists.txt  README.md
include/: darray.h  display.h  light.h  matrix.h  mesh.h  texture.h  triangle.h  utils.h  vector.h
src/: darray.c  display.c  light.c  main.c  matrix.c  mesh.c  texture.c  triangle.c  utils.c  vector.c
